add_library(vulkan_framework
VulkanApplication.cpp
VulkanBuffer.cpp
VulkanCommandBuffer.cpp
VulkanCommandPool.cpp
VulkanCommon.cpp
VulkanDescriptorPool.cpp
VulkanDescriptorSet.cpp
VulkanDescriptorSetLayout.cpp
VulkanDevice.cpp
VulkanFence.cpp
VulkanFrameBuffer.cpp
VulkanGraphicsPipeline.cpp
VulkanImage.cpp
VulkanImageView.cpp
VulkanInstance.cpp
VulkanPhysicalDevice.cpp
VulkanPipeline.cpp
VulkanPipelineLayout.cpp
VulkanQueue.cpp
VulkanRayTracingPipeline.cpp
VulkanRenderPass.cpp
VulkanRenderTarget.cpp
VulkanSemaphore.cpp
VulkanShaderModule.cpp
VulkanSwapChain.cpp
VulkanTexture.cpp
)

add_subdirectory(Rendering)